--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
 </footer>
 			</div>
 		</div>
-				<script src="http://code.jquery.com/jquery-latest.js"></script>
+				<script src="https://code.jquery.com/jquery-latest.js"></script>
 		<script>
 			var $event = $.event,
 			$special,
